# GIS-GZ-ChargeNet.swiss

./: .breakpoints  .replit  Auslastung_E-Tankstellen.py  README.md  SZ_GIS.csv  clean_charging_points_pow_coord.py  cleaned.json  combine_charging_points_with_load.py  functions.py  main (copy).py  main.py  main1.py  map.html  map_maker.py  optimizer.py  pyproject.toml  weight.py
Data/: Belastung_1000m_um_Tankstelle.geojson  City_Scenarios.px  SZ_GIS.csv  bevoelkerung.csv  buffer_around_cs_1005m.geojson  city_coords_pop.csv  clipped_tankstellen.geojson  tankstellen_belastung.geojson
Data/Export/: tankstellen_sufficency_models.dbf  tankstellen_sufficency_models.geojson  tankstellen_sufficency_models.shp  tankstellen_sufficency_models.shx  tankstellen_sufficency_test_pct.csv
