[tool.poetry]
name = "repl_python3_GIS-GZ-ChargeNetswiss"
version = "0.1.0"
description = ""
authors = ["d33pk3rn3l <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
