[tool.poetry]
name = "repl_python3_GIS-GZ-ChargeNetswiss"
version = "0.1.0"
description = ""
authors = ["d33pk3rn3l <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.10.2"
MultiPoint = "^0.0.3"
definitions = "^0.2.0"
function = "^1.2.0"
pyaxis = "^0.3.4"
ipython = "^7.30.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
